Make computed style handle eStyleUnit_Chars.  Bug 371043, r+sr=dbaron